...
        }
    }

    // MARK: - Private Methods

    override func setSelected(_: Bool, animated _: Bool) {
        accessibilityIdentifier = "FilmsTableViewCell"
        contentView.addSubview(filmImageView)
        contentView.addSubview(filmNameLabel)
        contentView.addSubview(filmDiscriptionLabel)
        contentView.addSubview(filmDateLabel)

        filmImageViewConstraintSetup()
...
